Bug 155210 - FILESAVE ODT Default chart row labels disappear from Writer chart
Summary: FILESAVE ODT Default chart row labels disappear from Writer chart
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0 target:7.5.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Chart-Data
  Show dependency treegraph
 
Reported: 2023-05-09 08:57 UTC by Gabor Kelemen (Collabora)
Modified: 2023-05-11 15:31 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Incorrect file as saved by current master (15.05 KB, application/vnd.oasis.opendocument.text)
2023-05-09 08:57 UTC, Gabor Kelemen (Collabora)
Details
Data table after creating the new document (42.79 KB, image/png)
2023-05-09 08:59 UTC, Gabor Kelemen (Collabora)
Details
Data table after saving and reloading the new document (40.39 KB, image/png)
2023-05-09 08:59 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-05-09 08:57:43 UTC
Created attachment 187160 [details]
Incorrect file as saved by current master

When a default chart is inserted to Writer and saved, the automatically inserted row labels disappear from the data table.

1. Open a new Writer document
2. Insert a default chart with the Standard toolbar button
3. Save as odt, reload

-> The default Row 1-4 labels are missing. 
If you edit these before saving in the Data Table dialog, the custom labels are also lost.
However, if you edit the data labels after the initial save-reload and save again, they are retained correctly.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 83b1f6b58a30bdb589e9ce73deef39f021aebde1
CPU threads: 14; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded

Seems to have started in 7.4 with:

https://git.libreoffice.org/core/+/6500106dff0f0cd86f509ffd01542aab77c21596%5E%21/#F0

author	Noel Grandin <noel.grandin@collabora.co.uk>	Tue Apr 19 13:48:55 2022 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Tue Apr 19 18:12:55 2022 +0200

tdf#148635 no need to init ChartDataWrapper more than once

Adding CC to: Noel Grandin
Comment 1 Gabor Kelemen (Collabora) 2023-05-09 08:59:30 UTC
Created attachment 187161 [details]
Data table after creating the new document
Comment 2 Gabor Kelemen (Collabora) 2023-05-09 08:59:53 UTC
Created attachment 187162 [details]
Data table after saving and reloading the new document
Comment 3 Stéphane Guillou (stragu) 2023-05-09 13:30:04 UTC
Reproduced in:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 002ae41bb6088002ba3ed0188ac822fb823a23f9
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 4 Commit Notification 2023-05-09 19:34:05 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/40f5a5be9fd228a5d33a3b1218864a38cb70dc1f

tdf#155210 FILESAVE ODT Default chart row labels disappear from Writer chart

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-05-10 07:26:58 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/c61fe2b0f90cfa103286523089f2f4678120dbe3

tdf#155210 FILESAVE ODT Default chart row labels disappear from Writer chart

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Stéphane Guillou (stragu) 2023-05-11 15:31:51 UTC
Fix verified in:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 88bd66d258de5fee3d35aba80c61fec49eb2a969
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thank you Gabor and Noel!