tdf#155210 FILESAVE ODT Default chart row labels disappear from Writer chart

revert
    commit 6500106dff0f0cd86f509ffd01542aab77c21596
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Tue Apr 19 13:48:55 2022 +0200
    tdf#148635 no need to init ChartDataWrapper more than once

Change-Id: I28f078731bd8bfedbde63d0bb2e5fe40f0a4ff46
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151583
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 40f5a5be9fd228a5d33a3b1218864a38cb70dc1f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151524
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>